<?xml version="1.0" encoding="utf-8"?>
<resources>
	<string name="app_name">1utt</string>

	<string name="saved_time">Faktor beadásának időpontja</string>
	<string name="saved_days">Faktor beadásának napja(i)</string>
	<string name="remain_amount">Rendelkezésre álló faktorok száma</string>
	<string name="reminder_status">Jelenleg a jelzes</string>
	<string name="active">Bekapcsolva</string>
	<string name="inactive">Kikapcsolva</string>

	<string name="settings_title">Beállítások</string>
	<string name="settings_alarm_enable_title">Jelzés</string>
	<string name="settings_alarm_enable_summary">Kikapcsolt állapotban nem jelez az alkalmazás</string>
	<string name="settings_alarm_days_title">Faktor beadásának napja(i)</string>
	<string name="settings_alarm_days_summary">Ezeken a napokon adod be a faktort</string>
	<string name="settings_alarm_time_title">Faktor beadásának időpontja</string>
	<string name="settings_alarm_time_summary">Ekkor adod be a faktort</string>
	<string name="settings_alarm_ringtone_title">Jelzés csengőhangja</string>
	<string name="settings_pill_remain_amount_title">Faktorok száma</string>
	<string name="settings_pill_remain_amount_summary">Ennyi faktor áll még rendelkezésedre</string>
	<string name="settings_pill_use_amount_title">Egyszeri faktor-mennyiség</string>
	<string name="settings_pill_use_amount_summary">Ennyi faktort adsz be egy alkalommal</string>
	<string name="settings_pill_runout_amount">Elfogyásra figyelmeztetés</string>
	<string name="settings_pill_runout_amount_summary">Ha már csak ennyi van, figyelmeztet, hogy fogytán vannak a faktorjaid</string>

	<string name="menu_settings">Beállítások</string>
	<string name="menu_addfactor">Új faktorok száma</string>

	<string name="value_na">Nincs rendelkezésre állo adat</string>

	<string name="button_pill_yes">OK, Bevettem!</string>
	<string name="button_pill_no">Majd később!</string>
	<string name="button_addpill_yes">Hozzáad</string>
	<string name="button_addpill_no">Mégsem</string>

	<string name="please_take_pills">Most kellene beadnod a faktorod!</string>
	<string name="text_pills_out">Fogytán vannak a faktorjaid, ne felejts el újat kérni!</string>

	<string name="title_pill_dialog">FIGYELJ!</string>
	<string name="title_addpill_dialog">Új adag</string>
</resources>
