<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
	android:id="@+id/mainLayout"
	android:layout_width="fill_parent"
	android:layout_height="fill_parent"
	android:background="@drawable/background"
	>
	<LinearLayout
		android:layout_height="wrap_content"
		android:layout_width="fill_parent"
		android:orientation="vertical"
		android:layout_marginTop="80dip"
		android:layout_marginLeft="10dip"
		android:layout_marginRight="10dip"
		>
		<TextView
			style="@style/main_label"
			android:text="@string/saved_time"
			/>
		<TextView
			style="@style/main_value"
			android:id="@+id/time_value"
			/>
		<TextView
			android:layout_marginTop="20dip"
			style="@style/main_label"
			android:text="@string/saved_days"
			/>
		<TextView
			style="@style/main_value"
			android:id="@+id/days_value"
			/>
		<TextView
			android:layout_marginTop="20dip"
			style="@style/main_label"
			android:text="@string/remain_amount"
			/>
		<TextView
			style="@style/main_value"
			android:id="@+id/amount_value"
			/>
		<TextView
			android:layout_marginTop="20dip"
			style="@style/main_label"
			android:text="@string/reminder_status"
			/>
		<TextView
			style="@style/main_value"
			android:id="@+id/status_value"
			/>
	</LinearLayout>
	<ImageView
		android:src="@drawable/footer"
		android:layout_alignParentBottom="true"
		android:layout_width="fill_parent"
		android:layout_height="wrap_content"
		android:scaleType="fitEnd"
		/>
</RelativeLayout>
